--- a/Math Practice/SymPy.ipynb
+++ b/Math Practice/SymPy.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e1a5644d",
    "metadata": {
     "canvas": {
@@ -3520,7 +3520,8 @@
     "inherit",
     "inherit"
    ],
-   "parameters": []
+   "parameters": [],
+   "version": "1.0"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
